# firebase-justice-bot

./: .env.local  .firebaserc  .gitignore  Procfilea  ProcfileaA  README.md  apphosting.yaml  firebase.json  h origin master  package-lock.json  package.json  remoteconfig.template.json  storage.rules  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vision_service.py
.idx/: integrations.json
.next/: trace
Justice-bot-smartdisputefinal/: .bash_profile  .dockerignore  .gitignore  ADMIN_CREDENTIALS.txt  COMBINED_DEPLOYMENT_SOLUTION.md  DATABASE_MIGRATION.md  DOMAIN_OWNERSHIP_SETUP.md  DUAL_PORT_SOLUTION.md  Dockerfile  Env  FINAL_DEPLOYMENT_SOLUTION.md  INTELLECTUAL_PROPERTY_PROTECTION.md  README.md  SIMPLE_DEPLOYMENT_GUIDE.md  STARTUP_OPTIMIZATION.md  WEBSITE_DEPLOYMENT_GUIDE.md  absolutely_minimal.py  add_port_forwarding_workflow.py  admin_system.py  app.py  auth_blueprint.py  auth_blueprint_broken.py  auto_port_adapter.py  auto_port_forward.py  canadian_legal_engine.py  case_manager.py  check_port_forwarding.sh  cloud_storage_handler.py  cloudbuild.yaml  comprehensive_legal_coverage_report.py  config.py  create_admin_account.py  create_clean_test_users.py  create_pilot_test_users.py  create_tables.py  create_test_user.py  csrf_cookies.txt  custom_domain_setup.py  database.py  database_fix.py  (+239 more)
Justice-bot-smartdisputefinal/routes/: admin.py  auth.py  cases.py  chat.py  generate.py  legal_updates.py  main.py  pricing.py
Justice-bot-smartdisputefinal/services/: ai_service.py  case_builder.py  classifier.py  doc_service.py  form_filler.py  timeline_builder.py
(+240 files in other folders)
