[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask==3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.76.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
    "pymupdf>=1.25.5",
    "python-docx>=1.1.2",
    "reportlab>=4.4.0",
    "requests>=2.32.3",
    "sendgrid>=6.11.0",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "stripe>=12.0.1",
    "authlib>=1.5.2",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.4",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "anthropic>=0.50.0",
    "slack-sdk>=3.35.0",
    "click>=8.0.0,<9.0.0",
    "pypdf2>=3.0.1",
    "docx>=0.2.4",
    "openai-agents>=0.1.0",
    "jinja2>=3.1.6",
    "agents>=1.4.0",
    "google-genai>=1.23.0",
    "pydantic>=2.11.3",
    "sift-stack-py>=0.7.0",
]
